# LabelImage

./: build.sh  labelimage.spec  main.py  pyproject.toml  requirements.txt
src/: app.py
src/canvas/: canvas.py  items.py
src/io/: coco.py  voc.py  yolo.py
src/models/: annotation.py  label.py  project.py
src/utils/: auto_annotate.py  crop_export.py  dataset_split.py  predict.py  snap.py  themes.py  undo.py
src/widgets/: annotation_list.py  auto_annotate_dialog.py  file_list.py  image_adjustments.py  label_list.py  minimap.py  predict_dialog.py  properties_panel.py  shortcuts_dialog.py  split_dialog.py  stats_dialog.py
